welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:4: error: type mismatch;
 found   : Unit
 required: Boolean
  while (fin()==false){serpent()}
  ^SnakeBuggle:22: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      if (estFaceMur()){return true}
                               ^SnakeBuggle:22: warning: enclosing method fin has result type Unit: return value discarded
      if (estFaceMur()){return true}
                        ^SnakeBuggle:25: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      if (estFaceMur()){return true}
                               ^SnakeBuggle:25: warning: enclosing method fin has result type Unit: return value discarded
      if (estFaceMur()){return true}
                        ^SnakeBuggle:27: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  } else return false
                ^SnakeBuggle:27: warning: enclosing method fin has result type Unit: return value discarded
  } else return false
         ^